--- a/dwh.cfg
+++ b/dwh.cfg
@@ -7,7 +7,7 @@ DB_PORT=5439
  
 
 [IAM_ROLE]
-ARN=arn:aws:iam::907006209601:role/dwhRole_vivian1024
+ARN=arn:aws:iam::9070XXXXXX:role/dwhRole_vivian1024
 
 [S3]
 LOG_DATA='s3://udacity-dend/log_data'
